<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">IPTV Manager</string>
    <!-- Change this URL to your IPTV Manager instance -->
    <string name="app_url">https://stream.cloudanthony.com</string>

    <!-- Login screen -->
    <string name="hint_server_url">Server URL</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Sign In</string>
    <string name="error_server_required">Server URL is required</string>
    <string name="error_username_required">Username is required</string>
    <string name="error_password_required">Password is required</string>
    <string name="error_invalid_response">Invalid server response</string>
    <string name="error_load_failed">Failed to load data</string>

    <!-- Empty states -->
    <string name="empty_no_channels">No channels</string>
    <string name="empty_import_hint">Import an M3U playlist to get started</string>
    <string name="empty_no_favourites">No favourites yet</string>
    <string name="empty_no_recent">No recently played</string>

    <!-- Dialogs -->
    <string name="select_server">Select Server</string>
    <string name="select_credential">Select Credential</string>
    <string name="confirm_logout">Are you sure you want to logout?</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
</resources>
